increased bg gradient size as stop-gap measure

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,21 +1,23 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
-}
-.body {
+  min-width: 100vw;
+  min-height: 120vh;
+  padding: 0;
   margin: 0;
-  height: 100%;
-  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .container {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+  min-width: 100vw;
+  min-height: 120vh;
   top: 0;
-  position: sticky;
+  position: static;
+  background-size: absolute;
 }
 
 /* .movingBox {
